--- a/UserHub/Pages/_Layout.cshtml
+++ b/UserHub/Pages/_Layout.cshtml
@@ -13,6 +13,12 @@
     <component type="typeof(HeadOutlet)" render-mode="Server" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
+    <script type="text/javascript">
+        function scrollToBottom(textarea){
+            textarea.scrollTop = textarea.scrollHeight;
+        }
+    </script>
+
 </head>
 <body>
     @RenderBody()
