--- a/UserHub/Pages/Dashboard.razor
+++ b/UserHub/Pages/Dashboard.razor
@@ -11,7 +11,7 @@
                 <MudCardContent>
                     <MudText Color="Color.Primary" Style="font-weight:bold;" Typo="Typo.h4" Align="Align.Center">Email</MudText>
                     <div class="d-flex justify-center">
-                        <MudButton Color="Color.Primary" Class="rounded-xl">
+                        <MudButton Href="/email" Color="Color.Primary" Class="rounded-xl">
                             <MudIcon Style="font-size:10rem;" Icon="@Icons.Material.Filled.Email"></MudIcon>
                         </MudButton>
                     </div>
