--- a/UserHub/Pages/Email.razor
+++ b/UserHub/Pages/Email.razor
@@ -12,7 +12,7 @@
     <MudPaper Class="pa-15 ma-2" Elevation="0" Width="100%">
         <MudContainer MaxWidth="MaxWidth.Medium">
             <MudCard Elevation="3" Class="pa-10">
-                <MudText Color="Color.Dark" GutterBottom Typo="Typo.h3" Align="Align.Center">Send Email from UserHub</MudText>
+                <MudText Color="Color.Dark" GutterBottom Typo="Typo.h3" Align="Align.Center">Send Email from "gardner.schuster@ethereal.email"</MudText>
                 <MudForm Model="model">
                         <MudTextField T="string" @bind-Value="model.To" Label="To" Variant="Variant.Outlined" Required="true" RequiredError="Recipient is required!"/>
                         <MudTextField T="string" @bind-Value="model.Subject" Label="Subject" Variant="Variant.Outlined" Required="true" RequiredError="Subject is required!"/>
